# study-gis-cpp

./: .gitignore  AGENTS.md  README.md
forks/: README.md
projects/001/: CMakeLists.txt  README.md  main.cpp  webmerc_1000km.geojson  webmerc_100km.geojson  webmerc_1km.geojson
projects/002/: CMakeLists.txt  README.md  geodesic_1000km.geojson  geodesic_100km.geojson  geodesic_1km.geojson  main.cpp
projects/003/: CMakeLists.txt  README.md  main.cpp
projects/004/: CMakeLists.txt  README.md  main.cpp
projects/005/: CMakeLists.txt  README.md  main.cpp
projects/006/: CMakeLists.txt  main.cpp
projects/007/: CMakeLists.txt  main.cpp
projects/008/: CMakeLists.txt  main.cpp
projects/008/tests/: CMakeLists.txt  README.md  run_case.py
projects/008/tests/cases/: disjoint_union.json  hole_difference.json  overlap_intersection.json  overlap_union.json  touching_edge_union.json
projects/009/: CMakeLists.txt  main.cpp
projects/009/tests/: CMakeLists.txt  README.md  run_case.py
projects/009/tests/cases_experimental/: concave_assumption_break_difference.json
projects/009/tests/cases_fast/: near_antimeridian_union.json  near_pole_union.json  overlap_union.json  touching_edge_union.json  touching_point_union.json
